--- a/tools/.vscode/settings.json
+++ b/tools/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "F:\\install_software\\Anaconda\\envs\\pytorch\\python.exe"
+    "python.pythonPath": "E:\\install_software\\Anaconda\\envs\\py36\\python.exe"
 }
